@@ -47,6 +47,7 @@ import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.SolrResourceLoader;
+import org.noggit.JSONWriter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -420,9 +421,20 @@ public abstract class ManagedResourceStorage {
 
   /** Default storage implementation that uses JSON as the storage format for managed data. */
   public static class JsonStorage extends ManagedResourceStorage {
+    private final int indentSize;
 
+    /** Uses {@link JSONWriter#DEFAULT_INDENT} space characters as an indent. */
     public JsonStorage(StorageIO storageIO, SolrResourceLoader loader) {
+      this(storageIO, loader, JSONWriter.DEFAULT_INDENT);
+    }
+
+    /**
+     * @param indentSize The number of space characters to use as an indent. 0=newlines but no
+     *     spaces, -1=no indent at all.
+     */
+    public JsonStorage(StorageIO storageIO, SolrResourceLoader loader, int indentSize) {
       super(storageIO, loader);
+      this.indentSize = indentSize;
     }
 
     /**
@@ -441,7 +453,7 @@ public abstract class ManagedResourceStorage {
 
     @Override
     public void store(String resourceId, Object toStore) throws IOException {
-      String json = toJSONString(toStore);
+      String json = toJSONString(toStore, indentSize);
       String storedResourceId = getStoredResourceId(resourceId);
       OutputStreamWriter writer = null;
       try {
