@@ -113,6 +113,8 @@ Improvements
 
 * SOLR-16959: Make the internal CoreSorter implementation configurable in solr.xml  (Vincent Primault)
 
+* SOLR-17050: Use compact JSON for Learning to Rank (LTR) feature and model storage. (Florin Babes, Christine Poerschke, Alessandro Benedetti)
+
 Optimizations
 ---------------------
 * SOLR-17084: LBSolrClient (used by CloudSolrClient) now returns the count of core tracked as not live AKA zombies
